assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 62.5%;
    /* 16 * 0.625 = 10px */
}

body {
    font-family: "Roboto", sans-serif;
}

.btn {
    cursor: pointer;
    border: none;
    border-radius: 50px;
    font-family: "Roboto", sans-serif;
    background-color: #fff;
    color: #000;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);

}

nav {
    position: sticky;
    top: 0;
    z-index: 10;
    width: 100%;
    padding: 0.5rem 1rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #ffffff;
}



.nav__icon {
    width: 35%;
    max-width: 150px;
    padding: 1rem;
    display: flex;
    justify-content: space-between;
    gap: 5px;
}


.nav__icon img {
    width: 25px;
}

.logo {
    font-family: "Merriweather", sans-serif;
    letter-spacing: 1px;
    font-weight: 400;
}

.logo span {
    font-weight: 900;
}

.modal {
    position: fixed;
    z-index: 100;
    width: 100%;
    min-height: 100vh;
    padding: 2rem;
    display: flex;
    flex-direction: column;
    background-color: #fff;

}

.modal img {
    width: 10%;
    max-width: 30px;

    align-self: flex-end;
}

.modal ul {
    margin: 2rem 1rem;
    min-height: 150px;
    padding: 1rem;
    list-style: none;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.modal li {
    padding: 1rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: "Merriweather", sans-serif;
    font-size: 2.5rem;

}

.slider {
    position: relative;
    display: flex;
    overflow-x: auto;
    scroll-snap-type: x mandatory;
    scroll-behavior: smooth;
    overflow-y: hidden;
    -ms-overflow-style: none;
}


.slider::-webkit-scrollbar {
    display: none;
}

.slider__indicator {
    width: 25%;
    max-width: 150px;
    position: absolute;
    z-index: 10;
    margin: 1rem 0;
    align-self: flex-end;
    justify-self: center;
    display: flex;
    justify-content: space-evenly;
}

.slider__indicator button {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    border: none;
    background-color: #f5f5f5;
    cursor: pointer;
}

.slider__indicator button.active {
    width: 10px;
    background-color: #fff;
    box-shadow: 0 0 8px rgba(255, 255, 255, 0.8);
}

.card {
    position: relative;
    flex: 0 0 100%;
    height: 320px;
    scroll-snap-align: start;
}

.card img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center calc(70%);
}


.card__content {
    position: absolute;
    padding: 4rem 2rem;
    height: 100%;
    width: 100%;
    display: flex;
    gap: 5px;
    flex-direction: column;
    justify-content: flex-end;
    align-items: flex-start;
    color: #fff;
    text-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
}

.card__content h2 {
    font-size: 2.5rem;

}

.card__content p {
    font-size: 1.2rem;
}

.hero__btn {
    padding: 0.3rem 2rem;
}

.feature {
    padding: 2rem;
}

.title {
    margin: 1rem 0;
    font-size: 2rem;
    font-weight: 400;
}

.feature__container {
    display: grid;
    grid-template-rows: 1fr 1fr;
    gap: 10px;
}

.card__feature {
    position: relative;
    min-height: 280px;
    display: flex;
    align-items: flex-end;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
}

.card__feature img,
.card__feature picture {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: calc(20%) center;
}

.feature__content {
    padding: 2rem;
    position: absolute;
    z-index: 9;
    display: flex;
    flex-direction: column;
    gap: 20px;


}

.feature__btn {
    padding: 0.5rem 1.5rem;
    min-width: 50px;
}


.trending h2 {
    margin: 2rem;
}


.trending__container {
    display: grid;
    grid-template-rows: repeat(4, 1fr);
}

.trending__card {
    position: relative;
    display: flex;
    justify-content: flex-start;
    align-items: flex-end;
}

.trending__card-content {
    position: absolute;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    gap: 10px;
    text-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
    color: #ffffff;
    line-height: 1.5em;
}

.trending__card-content h3 {
    font-size: 2rem;
}

.trending__card-content p {
    font-size: 1.2rem;

}

.trnd__btn {
    padding: 0.5rem;
    width: 30%;
    max-width: 100px;
}

.trending__card img,
.trending__card picture {
    width: 100%;
    height: 100%;
    object-fit: cover;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
}

.latest {
    border: 1px solid #000;
    padding: 2rem;
}

.latest h2 {
    margin: 1rem 0;
}

.card__container {
    width: 100%;
    display: flex;
    gap: 10px;
    overflow-x: auto;

}

.card__item {
    min-width: 230px;
}

.card__item:nth-of-type(3n + 1) {
    background-color: #EAF3FF;
}

.card__item:nth-of-type(3n + 2) {
    background-color: #F5EFE6;
}

.card__item:nth-of-type(3n + 3) {
    background-color: #E8F0EC;
}


.item img {
    width: 100%;
    object-fit: cover;
}

.detail {
    width: 100%;
    min-height: 118px;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    gap: 5px;
    font-family: "Roboto", sans-serif;
    background-color: #ffffff;
    color: #111111;

}

.detail h3 {
    font-size: 1.6rem;
    font-weight: 500;
}

.detail p {
    font-size: 1.4rem;
    color: #333333;
}

.detail .item__price {
    font-weight: 500;
    color: #111111;
}


.pop {
    display: none;
}

.nav__main ul {
    display: none;
}

.search__container {
    display: none;
}

.cls-btn {
    min-width: 25px;
    max-width: 30px;


}

.svg__icon {
    cursor: pointer;
    background-color: #fff;
    border: none;
    outline: none;
    display: flex;
    align-items: center;
    justify-content: center;
    align-self: flex-end;
}

